# beats

./: README.md
asmbeats/: Makefile  README.md  beats  beats.asm
asmbeats_aarch64/: Makefile  README.md  beats  beats_aarch64.asm
asmbeats_x86_64/: README.md
cbeats/: Makefile  README.md  beats  beats.c
pybeats/: README.md  beats.py
winbeats/: CMakeLists.txt  README.md  beats.cpp
